// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginImage should render image logo 1`] = `
<div>
  <div
    class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
    data-testid="PluginImage__logo"
  >
    <img
      alt="Logo"
      class="object-cover w-full h-full"
      src="https://ark.io/logo.png"
    />
  </div>
</div>
`;

exports[`PluginImage should render image placeholder 1`] = `
<div>
  <div
    class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
    data-testid="PluginImage__placeholder"
  >
    <svg>
      plugin-logo-placeholder.svg
    </svg>
  </div>
</div>
`;

exports[`PluginImage should render updating element in dark mode 1`] = `
<div>
  <div
    class="PluginImage__PluginImageWrapper-iwox49-0 eGXzoC"
    data-testid="PluginImage__updating"
  >
    <svg
      height="40"
      viewBox="0 0 40 40"
      width="40"
    >
      <circle
        cx="20"
        cy="20"
        fill="transparent"
        r="18.5"
        stroke="var(--theme-color-success-800)"
        stroke-width="3"
      />
      <circle
        cx="20"
        cy="20"
        fill="transparent"
        r="18.5"
        stroke="var(--theme-color-success-600)"
        stroke-dasharray="116.23892818282235"
        stroke-dashoffset="-2789.7342763877364"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="3"
        transform="rotate(-90 20 20)"
      />
      <text
        data-testid="CircularProgressBar__percentage"
        dy="0.3em"
        fill="var(--theme-color-success-600)"
        font-size="0.8rem"
        font-weight="600"
        text-anchor="middle"
        x="50%"
        y="50%"
      >
        <tspan>
          2500
          <tspan
            dy="-0.6em"
            font-size="0.4rem"
            font-weight="bold"
          >
            %
          </tspan>
        </tspan>
      </text>
    </svg>
  </div>
</div>
`;

exports[`PluginImage should render updating element in light mode 1`] = `
<div>
  <div
    class="PluginImage__PluginImageWrapper-iwox49-0 eGXzoC"
    data-testid="PluginImage__updating"
  >
    <svg
      height="40"
      viewBox="0 0 40 40"
      width="40"
    >
      <circle
        cx="20"
        cy="20"
        fill="transparent"
        r="18.5"
        stroke="var(--theme-color-success-200)"
        stroke-width="3"
      />
      <circle
        cx="20"
        cy="20"
        fill="transparent"
        r="18.5"
        stroke="var(--theme-color-success-600)"
        stroke-dasharray="116.23892818282235"
        stroke-dashoffset="-2789.7342763877364"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="3"
        transform="rotate(-90 20 20)"
      />
      <text
        data-testid="CircularProgressBar__percentage"
        dy="0.3em"
        fill="var(--theme-color-success-600)"
        font-size="0.8rem"
        font-weight="600"
        text-anchor="middle"
        x="50%"
        y="50%"
      >
        <tspan>
          2500
          <tspan
            dy="-0.6em"
            font-size="0.4rem"
            font-weight="bold"
          >
            %
          </tspan>
        </tspan>
      </text>
    </svg>
  </div>
</div>
`;

exports[`PluginImage should render updating with label 1`] = `
<div>
  <div
    class="PluginImage__PluginImageWrapper-iwox49-0 eGXzoC"
    data-testid="PluginImage__updating"
  >
    <svg
      height="40"
      viewBox="0 0 40 40"
      width="40"
    >
      <circle
        cx="20"
        cy="20"
        fill="transparent"
        r="18.5"
        stroke="var(--theme-color-success-800)"
        stroke-width="3"
      />
      <circle
        cx="20"
        cy="20"
        fill="transparent"
        r="18.5"
        stroke="var(--theme-color-success-600)"
        stroke-dasharray="116.23892818282235"
        stroke-dashoffset="-2789.7342763877364"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="3"
        transform="rotate(-90 20 20)"
      />
      <text
        data-testid="CircularProgressBar__percentage"
        dy="0.3em"
        fill="var(--theme-color-success-600)"
        font-size="0.8rem"
        font-weight="600"
        text-anchor="middle"
        x="50%"
        y="50%"
      >
        <tspan>
          2500
          <tspan
            dy="-0.6em"
            font-size="0.4rem"
            font-weight="bold"
          >
            %
          </tspan>
        </tspan>
      </text>
    </svg>
    <p
      class="text-theme-success-600 text-sm font-semibold"
      data-testid="PluginImage__updating__label"
    >
      Updating...
    </p>
  </div>
</div>
`;

exports[`PluginImage should render with size 'lg' 1`] = `
<div>
  <div
    class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
    data-testid="PluginImage__placeholder"
  >
    <svg>
      plugin-logo-placeholder.svg
    </svg>
  </div>
</div>
`;

exports[`PluginImage should render with size 'md' 1`] = `
<div>
  <div
    class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
    data-testid="PluginImage__placeholder"
  >
    <svg>
      plugin-logo-placeholder.svg
    </svg>
  </div>
</div>
`;

exports[`PluginImage should render with size 'sm' 1`] = `
<div>
  <div
    class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
    data-testid="PluginImage__placeholder"
  >
    <svg>
      plugin-logo-placeholder.svg
    </svg>
  </div>
</div>
`;

exports[`PluginImage should render with size 'xs' 1`] = `
<div>
  <div
    class="PluginImage__PluginImageWrapper-iwox49-0 cNxevm"
    data-testid="PluginImage__placeholder"
  >
    <svg>
      plugin-logo-placeholder.svg
    </svg>
  </div>
</div>
`;
